--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am 利毓貞</strong>, a super simple<br />
-					responsive site template freebie<br />
+					<h1><strong>我是利毓貞</strong>, 目前在多元職能協會上網路電商經營與行銷班<br />
+					我的興趣是攝影與旅遊,希望能走遍世界各地去體驗不同國家的人文風情<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
@@ -29,16 +29,20 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>承德可可農園 專營可可產品 <br />
+							可可堅果. 可可粉. 可可果膠飲</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>.屏東農民於檳榔樹下採用間作方式種植可可樹，讓可可產業逐漸紮根，成為屏東農民新興產業。
+.屏東縣政府建置「屏東縣客庄可可產業跨域推廣所」為未來可可產業之發展中心。
+.整合可可各類商品、農特產與生態教育展覽園區之多元經營模式提升屏東可可旅遊品質與帶動周邊經濟效益活絡，並成為六堆生態旅遊新亮點。
+</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
 				<!-- Two -->
+				<!--
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
@@ -77,6 +81,7 @@
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
+					-->
 
 				<!-- Three -->
 					<section id="three">
