--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							<h2>承德可可農園 專營可可產品 <br />
 							可可堅果. 可可粉. 可可果膠飲</h2>
 						</header>
-						<p>.屏東農民於檳榔樹下採用間作方式種植可可樹，讓可可產業逐漸紮根，成為屏東農民新興產業。
-.屏東縣政府建置「屏東縣客庄可可產業跨域推廣所」為未來可可產業之發展中心。
+						<p>.屏東農民於檳榔樹下採用間作方式種植可可樹，讓可可產業逐漸紮根，成為屏東農民新興產業。<br />
+.屏東縣政府建置「屏東縣客庄可可產業跨域推廣所」為未來可可產業之發展中心。<br />
 .整合可可各類商品、農特產與生態教育展覽園區之多元經營模式提升屏東可可旅遊品質與帶動周邊經濟效益活絡，並成為六堆生態旅遊新亮點。
 </p>
 						<ul class="actions">
