--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>歡迎舊雨新知來電恰詢.<br />農園生態旅遊恰詢</p>
+						<p>歡迎舊雨新知來電洽詢.<br />農園生態旅遊洽詢</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
